[tool.poetry]
name = "data-wrangling-utils"
version = "0.0.1"
description = ""
authors = ["Ian Yu <ian.yu@arc.com.co>"]

[tool.poetry.dependencies]
python = "^3.8"
ftfy = "^6.0.3"
Unidecode = "^1.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
